--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ env:
   - AWS_SECRET_ACCESS_KEY=gKcRJCpesBg+tC000NmHvwMyU68TtDCa9809s28Z
   - DFB_JTO=-javaagent:dfbuild-agent.jar=PACKAGING_BASE_URI=$DFB_PACKAGING_URL,PRODUCT_KEY=$DFB_PRODUCT_KEY/,BUILD_KEY=$DFB_BUILD_ID/,MODULES_KEY=modules/,START_TIME=0,BUILD_BASE_DIR=$DFB_PROJECT_DIR
 jdk:
-- oraclejdk6
+- openjdk6
 language: java
 notifications:
   webhooks:
